--- a/02.跑马灯效果.html
+++ b/02.跑马灯效果.html
@@ -16,7 +16,7 @@
 
     <pre>
         <h2>
-            1 用v-on 给Move 按钮绑定一个时间
+            1 用v-on 给Move 按钮绑定一个时间！
             2 在按钮的事件处理函数中，写相关的业务逻辑代码
             拿到msg字符串，进行截取操作调用字符串的substring方法，进行字符的截取放到最后一个位置
             3 为了实现点击按钮自动截取的功能需要把 2 步骤的代码放到一个定时器中去
